unified_tests/file_roles/visible_type_declaration_in_test_file/expect/build.text.stderr
lib.test.copp:1:14: error: visible declarations are not allowed in .test.copp files
  visible type Helper :: struct {
               ^
